# HaiDongPaperSDGFA

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  SGDA.cpp  SGDA.h  example1.cpp  example1.h  example2.h  logistics_regression.h  main.cpp
